--- a/faq.html
+++ b/faq.html
@@ -1,5 +1,86 @@
+<!DOCTYPE html>
 <html>
+    <head>
+        <title>Ritzville Board Game Frequently-Asked Questions</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Lora&display=swap" rel="stylesheet">
+        <style>
+            body { font-family: 'Lato'; margin: 5em; max-width: 50em; }
+            p { font-weight: 300; line-height: 160%; }
+        </style>
+    </head>
     <body>
-        <h1>FAQ</h1>
+        <h1>Ritzville Board Game</h1>
+        <h2>Frequently-Asked Questions</h2>
+        <ul>
+            <li>
+                <h3>Do zero-point cards have to go on the bottom row?</h3>
+                <p>
+                    No. At the start of the game there will probably be some zero-point cards
+                    on the first or second row, and when you grow the town and take a card, the
+                    replacement card goes in the empty spot, even if it’s a zero-point card on
+                    another row.
+                </p>
+            </li>
+            <li>
+                <h3>Can the bottom row contain cards that are worth points?</h3>
+                <p>
+                    Yes. When you grow the town and take a card, the replacement card goes in the
+                    empty spot, even if it’s on the bottom row and has a point value. It’s only 
+                    at the very start of the game where the bottom row contains only zero-point
+                    cards.
+                </p>
+            </li>
+            <li>
+                <h3>Can I take more than one chip of the same color if there aren’t enough colors left to take one of each?</h3>
+                <p>
+                    No. If there are fewer than three colors of chips available, you’ll have to
+                    take fewer than three chips.
+                </p>
+            </li>
+            <li>
+                <h3>Do I have to take three chips, even if I don’t go over my ten-chip limit?</h3>
+                <p>
+                    No, you can choose to take fewer chips.
+                </p>
+            </li>
+            <li>
+                <h3>I earned a +4 bonus but there are no +4 chips! What do I do?</h3>
+                <p>
+                    Take two +2 chips.
+                </p>
+            </li>
+            <li>
+                <h3>What if I need a +2 chip or +3 chip but there are no more available?</h3>
+                <p>
+                    You or any other player can make change by exchanging two +3 chips for
+                    three +2 chips or vice versa. If there are simply not enough bonus-point
+                    chips available, you can use coins or some other way to keep track of the
+                    bonus points you earn.
+                </p>
+            </li>
+            <li>
+                <h3>Can I use bonus-point chips to pay for cards and grow the town?</h3>
+                <p>
+                    No. Bonus-point chips cannot be used in place of chips of the correct
+                    color to grow the town. If you’re short a chip, you can always turn in
+                    three of any color chip as a wildcard chip.
+                </p>
+            </li>
+            <li>
+                <h3>Can I turn in six chips to use as two wildcard chips?</h3>
+                <p>
+                    Yes, you <em>could</em>, but consider whether it’s the best use of your
+                    chips. If it would win you the game, then go for it.
+                </p>
+            </li>
+            <li>
+                <h3>Can I trade cards with other players?</h3>
+                <p>
+                    No. Trading cards is not allowed.
+                </p>
+            </li>
+        </ol>
     </body>
 </html>
